--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(railway)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(railway main.cpp)
+add_executable(railway main.cpp Station.cpp Station.h)
