--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(railway)
+project(Assegnamento2_0)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(railway main.cpp)
+add_executable(Assegnamento2_0 main.cpp time_table.cpp time_table.h Train.cpp Train.h Station.cpp Station.h)
